# d3d12-sandbox-rs

./: Cargo.toml  README.md
crates/basics/: Cargo.toml  README  build.rs
crates/basics/shaders/: basics.hlsl
crates/basics/src/: d3d12.rs  framework.rs  lib.rs  main.rs  renderer.rs
crates/basics/src/d3d12/: barrier.rs  command_queue.rs  device.rs  pix.rs  resource.rs  shader.rs  util.rs
crates/dxr-basics/: Cargo.toml  build.rs
crates/dxr-basics/shaders/: fullscreen.hlsl  rasterization.hlsl  raytracing.hlsl  scene.hlsl
crates/dxr-basics/src/: framework.rs  gfx.rs  main.rs
crates/dxr-basics/src/gfx/: d3d12.rs  math.rs  mesh.rs  renderer.rs  scene.rs
crates/dxr-basics/src/gfx/d3d12/: barrier.rs  device.rs  raytracing.rs  view.rs
crates/lighting/: Cargo.toml  build.rs
crates/lighting/shaders/: brdf.hlsl  light.hlsl  rasterization.hlsl  raytracing.hlsl  scene.hlsl  shadow_map.hlsl
crates/lighting/src/: framework.rs  gfx.rs  lib.rs  main.rs
crates/lighting/src/gfx/: d3d12.rs  light.rs  math.rs  mesh.rs  renderer.rs  scene.rs  shadow_map.rs
crates/lighting/src/gfx/d3d12/: command.rs  device.rs  pso.rs  raytracing.rs  resource.rs  shader.rs  util.rs  view.rs
