[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"
tobj = "4.0.2"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
